# xskeleton.plugin

./: CMakeLists.txt  README.md
source/: xskeleton.h  xskeleton_descriptor.h  xskeleton_xgpu_rsc_loader.cpp  xskeleton_xgpu_rsc_loader.h
source/compiler/: main.cpp  xskeleton_compiler.cpp  xskeleton_compiler.h
